fix form not working on ie and dark mode on edge hopefully

--- a/styles-ie.css
+++ b/styles-ie.css
@@ -61,7 +61,6 @@ html {
 body.dark-mode {
     background-color: #121212;
     color: #ffffff;
-    filter: invert(1) hue-rotate(180deg);
 }
 
 body.dark-mode select {
